# chatbot_with_redash

./: .gitignore  Makefile  README.md
.github/workflows/: docker-image.yml  docker_image_backend.yml  docker_image_frontend.yml
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/src/: __init__.py
api/src/api/: __init__.py
api/src/llm/: chat.py  tools.py
backend/api/: pyproject.toml
backend/api/src/api/: __init__.py  messages.py
backend/api/src/openAi/: chat.py
notebook/: data_loader.ipynb
notebook/.ipynb_checkpoints/: data_loader-checkpoint.ipynb
redash/: .pre-commit-config.yaml  compose.base.yaml  compose.yaml
redash/migrations/: 0001_warning.py
redash/migrations/versions/: 0ec979123ba4_.py  1038c2174f5d_make_case_insensitive_hash_of_query_text.py  7205816877ec_change_type_of_json_fields_from_varchar_.py  7ce5925f832b_create_sqlalchemy_searchable_expressions.py  89bc7873a3e0_fix_multiple_heads.py  a92d92aa678e_inline_tags.py  d7d747033183_encrypt_alert_destinations.py  fd4fc850d7ea_.py
redash/redash/: __init__.py  monitor.py  permissions.py  security.py  worker.py
redash/redash/authentication/: __init__.py  google_oauth.py  jwt_auth.py  remote_user_auth.py
redash/redash/cli/: __init__.py  database.py  organization.py  rq.py  users.py
redash/redash/destinations/: asana.py  chatwork.py  datadog.py  email.py  hangoutschat.py  mattermost.py  slack.py  webex.py  (+2 more)
redash/tests/: __init__.py  factories.py  test_authentication.py  test_cli.py  test_configuration.py  test_handlers.py  test_models.py  test_permissions.py  test_utils.py
scripts/: db_access.py
(+163 files in other folders)
